--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
 		<project.build.finalName>${project.name}-war.war</project.build.finalName>
 		<group.id>com.timothy.loancalculator</group.id>
 		<project.version>1.0.0</project.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sourceEncoding>UTF-8</sourceEncoding>
 	</properties>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -254,6 +256,25 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/lib/ibx.jar</systemPath>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.tess</groupId>
+			<artifactId>com.tess</artifactId>
+			<version>1.4.2</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/stripes-security-1.4.2.jar</systemPath>
+		</dependency>
+		
+		
+		
+		<dependency>
+			<groupId>secureTag</groupId>
+			<artifactId>stripes-security</artifactId>
+			<version>1.4.2</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/secureTag.jar</systemPath>
+		</dependency>
 
 		<dependency>
 			<groupId>tim.luckydip</groupId>
@@ -290,42 +311,39 @@
 			<artifactId>dbpool</artifactId>
 			<version>5.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
 			<version>1.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>4.1.3</version>
 		</dependency>
-		
-		
+
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.1.3</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.stripesstuff</groupId>
 			<artifactId>stripesstuff</artifactId>
 			<version>0.4.0</version>
 		</dependency>
-		<!--dependency>
-			<groupId>com.samaxes.stripes</groupId>
-			<artifactId>stripes-injection-enricher</artifactId>
-			<version>1.0.2</version>
-		</dependency-->
+		<!--dependency> <groupId>com.samaxes.stripes</groupId> <artifactId>stripes-injection-enricher</artifactId> 
+			<version>1.0.2</version> </dependency -->
 
 	</dependencies>
 
