--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,15 +28,20 @@
         <param-name>Extension.Packages</param-name>
         <param-value>org.stripesstuff.plugin, org.stripesstuff.plugin.security, com.samaxes.stripes.inject</param-value>
     </init-param>
+     <init-param>
+         <param-name>UnauthorizedResolutionURL</param-name>
+         <param-value>/unauthorized.jsp</param-value>
+     </init-param>
     <init-param>
         <param-name>SecurityManager.Class</param-name>
         <param-value>com.timothy.cmp.security.SecurityManagerCMP</param-value>
     </init-param>
     
     <init-param>
-    <param-name>ExceptionHandler.Class</param-name>
-    <param-value>com.pixelandtag.cmp.handlers.CMPExceptionHandler</param-value>
-</init-param>
+   	 	<param-name>ExceptionHandler.Class</param-name>
+    	<param-value>com.pixelandtag.cmp.handlers.CMPExceptionHandler</param-value>
+	</init-param>
+	
     
 	</filter>
 
@@ -53,6 +58,12 @@
 	<dispatcher>REQUEST</dispatcher>
 	<dispatcher>FORWARD</dispatcher>
 </filter-mapping>
+
+<filter-mapping>
+     <filter-name>StripesFilter</filter-name>
+     <url-pattern>*.jsp</url-pattern>
+     <dispatcher>REQUEST</dispatcher>
+ </filter-mapping>
 
 <servlet-mapping>
 	<servlet-name>DispatcherServlet</servlet-name>
@@ -87,7 +98,7 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>mainapp.jsp</welcome-file>
 	</welcome-file-list>
 
 
