Minor bugs here and there... now reasonable working

--- a/.gitignore
+++ b/.gitignore
@@ -545,3 +545,19 @@
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
