Billing seems to work well now. We need more db connections though

--- a/.gitignore
+++ b/.gitignore
@@ -561,3 +561,20 @@
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
