--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,17 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jboss-remote-naming</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.xnio</groupId>
+			<artifactId>xnio-nio</artifactId>
+			<version>3.3.0.Final</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -342,7 +353,7 @@
 
 	<build>
 
-		<finalName>celcom</finalName>
+		<finalName>cmp</finalName>
 
 
 		<plugins>
