--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+settings/
 log/*
 /target/
 /target/
@@ -623,3 +624,9 @@ log/*
 /target/
 /target/
 /log/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
