Double confirmation success

--- a/.gitignore
+++ b/.gitignore
@@ -630,3 +630,13 @@ log/*
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
