--- a/log4j.billing.properties
+++ b/log4j.billing.properties
@@ -1,5 +1,5 @@
 # Set category priority to DEBUG and its only appender to A1
-log4j.rootCategory=DEBUG, dailyApp
+log4j.rootCategory=INFO, dailyApp
 #log4j.rootCategory=DEBUG, A1
 # A1 output
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
