Adhere to customer subscription rules

--- a/.gitignore
+++ b/.gitignore
@@ -647,3 +647,15 @@ log/*
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
