Finally subscription working. Testing phase now

--- a/.gitignore
+++ b/.gitignore
@@ -734,3 +734,13 @@ log/*
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
