Subsription errors now should be fine

--- a/mtsender.properties
+++ b/mtsender.properties
@@ -23,7 +23,7 @@ WORKER_THREADS=2
 
 #The size of the queue for sms to be sent.
 #The max number of sms we can have in the queue
-queueSize=100
+queueSize=10000
 
 #When a thread is retrieving an MT message from queue,
 #This value is the time in mili-seconds it waits for an element to become available.
@@ -31,19 +31,22 @@ pollWait=100
 
 
 #Custom connection pool parameters
-constr=jdbc:mysql://localhost/pixeland_content360?user=root&password=
+constr=jdbc:mysql://db/pixeland_content360?user=root&password=Admin123#@!
 db_username=root
-db_password=
-db_host=localhost
-initialDBConnections=10
-maxDBConnections=12
+db_password=Admin123#@!
+db_host=db
+initialDBConnections=2
+maxDBConnections=4
 #the db name
 DATABASE=pixeland_content360
 
 
-SERVER_TZ=+03:00
+SERVER_TZ=-05:00
 CLIENT_TZ=+03:00
 
+#The size of billable objects per
+#round
 billables_per_batch=100
 
-
+#The number of billing worker threads
+billing_workers=3
