Used EJB for menu operations... TODO seperate that bean kabisa!

--- a/mtsender.properties
+++ b/mtsender.properties
@@ -31,9 +31,9 @@ pollWait=100
 
 
 #Custom connection pool parameters
-constr=jdbc:mysql://db/pixeland_content360?user=root&password=Admin123#@!
+constr=jdbc:mysql://db/pixeland_content360?user=root&password=
 db_username=root
-db_password=Admin123#@!
+db_password=
 db_host=db
 initialDBConnections=2
 maxDBConnections=4
