--- a/mtsender.properties
+++ b/mtsender.properties
@@ -1,6 +1,6 @@
-mturl=http://41.223.58.157:56000/Bharti
-login=content36
-pass=content12
+mturl=
+login=
+pass=
 type=text
 src=32329
 
@@ -23,7 +23,7 @@ WORKER_THREADS=2
 
 #The size of the queue for sms to be sent.
 #The max number of sms we can have in the queue
-queueSize=10000
+queueSize=1000
 
 #When a thread is retrieving an MT message from queue,
 #This value is the time in mili-seconds it waits for an element to become available.
