--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,8 @@
 
 		<dependency>
 			<groupId>org.jdom</groupId>
-			<artifactId>jdom2</artifactId>
-			<version>2.0.5</version>
+			<artifactId>jdom</artifactId>
+			<version>1.1</version>
 		</dependency>
 
 
