Find & renew keywords. Added subscription check for dating service

--- a/.gitignore
+++ b/.gitignore
@@ -847,3 +847,19 @@ log/*
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
