--- a/pom.xml
+++ b/pom.xml
@@ -363,11 +363,34 @@
 
 
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.1</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<archive>
 						<manifest>
+						 	<addClasspath>true</addClasspath>
+               				<classpathPrefix>lib/</classpathPrefix>
 							<mainClass>com.pixelandtag.sms.producerthreads.BillingService</mainClass>
 						</manifest>
 					</archive>
@@ -393,7 +416,8 @@
 					</excludes>
 					<archive>
 						<manifest>
-							<addClasspath>false</addClasspath>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
 						</manifest>
 					</archive>
 				</configuration>
