Cleanup and test

--- a/mtsender.properties
+++ b/mtsender.properties
@@ -1,8 +1,7 @@
-mturl=http://41.223.58.157:56000/Bharti
-login=content36
-pass=cont@36nt
-type=text
-src=32329
+mturl=
+login=
+type=
+src=
 
 #Whether to split messages or not
 
