--- a/mtsender.properties
+++ b/mtsender.properties
@@ -1,7 +1,9 @@
-mturl=
-login=
-type=
-src=
+mturl=http://41.223.58.157:56000/Bharti
+login=content36
+pass=content36
+#cont@36nt
+type=text
+src=32329
 
 #Whether to split messages or not
 
