--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
 
 	<repositories>
-		
+
 	</repositories>
 
 	<groupId>com.timothy.sms_platform</groupId>
@@ -26,6 +26,34 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-core</artifactId>
+			<version>1.19</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>2.3.1.GA</version>
+		</dependency>
+
+
+		<!-- Added by timothy mwangi -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-multipart-provider</artifactId>
+			<version>2.2.0.GA</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>2.3.1.GA</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -170,11 +198,6 @@
 			<version>1.1.2</version>
 		</dependency>
 
-
-
-
-
-
 		<dependency>
 			<groupId>javax.ejb</groupId>
 			<artifactId>ejb-api</artifactId>
@@ -233,13 +256,6 @@
 			<version>2.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxrs</artifactId>
-			<version>2.2.1.GA</version>
-		</dependency>
-
 
 		<dependency>
 			<groupId>tim.ibx</groupId>
@@ -338,6 +354,12 @@
 
 
 		<dependency>
+			<groupId>org.daisy.libs</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.1.3</version>
@@ -348,8 +370,20 @@
 			<artifactId>stripesstuff</artifactId>
 			<version>0.4.0</version>
 		</dependency>
-		<!--dependency> <groupId>com.samaxes.stripes</groupId> <artifactId>stripes-injection-enricher</artifactId> 
-			<version>1.0.2</version> </dependency -->
+
+
+		<dependency>
+			<groupId>com.samaxes.stripes</groupId>
+			<artifactId>stripes-injection-enricher</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+
 
 	</dependencies>
 
@@ -447,7 +481,8 @@
 							<excludes>
 								<exclude>CVS/**</exclude>
 								<exclude>**/*.xml</exclude>
-								<exclude>WEB-INF/lib/*.jar</exclude>
+								<exclude>WEB-INF/lib/distcelcom.jar</exclude>
+								<exclude>WEB-INF/lib/ibx.jar</exclude>
 							</excludes>
 						</resource>
 					</webResources>
