--- a/mtsender.properties
+++ b/mtsender.properties
@@ -51,3 +51,14 @@ billables_per_batch=100
 
 #The number of billing worker threads
 billing_workers=3
+
+
+#enable the throttling to behave
+#like human interraction
+enable_biller_random_throttling=true
+#Maximum time in milliseconds to wait before sending another request
+# to the billing server
+max_throttle_billing=60000
+#Minimum time in milliseconds to wait before sending another request
+# to the billing server
+min_throttle_billing=60000
