Adaptive throttling added

--- a/mtsender.properties
+++ b/mtsender.properties
@@ -53,6 +53,12 @@ billables_per_batch=100
 billing_workers=3
 
 
+#Enable/Disable adaptive or intelligent
+#throttling. When disabled, the 
+#throttle value will not be a
+#random value. min_throttle_billing value
+#will be assumed as the throttle
+adaptive_throttling=false
 #enable the throttling to behave
 #like human interraction
 enable_biller_random_throttling=true
@@ -61,4 +67,4 @@ enable_biller_random_throttling=true
 max_throttle_billing=60000
 #Minimum time in milliseconds to wait before sending another request
 # to the billing server
-min_throttle_billing=60000
+min_throttle_billing=600
