--- a/ufw rules.config
+++ b/ufw rules.config
@@ -30,6 +30,42 @@ sudo ufw allow from 41.223.58.157 to any port 8880
 sudo ufw allow from 105.166.211.204 to any port 8880
 
 
+c0nT3nT360!!
+/*Below are currently active on .db*/
+sudo ufw default deny
+sudo ufw default allow outgoing
+sudo ufw allow from 172.27.224.1
+sudo ufw allow from 172.27.232.1
+sudo ufw allow from 104.131.29.202
+sudo ufw allow from 192.168.1.10
+sudo ufw allow from 10.132.200.80
+sudo ufw allow from 104.131.90.133
+sudo ufw allow from 192.168.1.11
+sudo ufw allow from 10.132.200.81
+sudo ufw allow from 172.27.224.1 to any port 417
+sudo ufw allow from 172.27.232.1 to any port 417
+sudo ufw allow from 104.131.29.202 to any port 417
+sudo ufw allow from 192.168.1.10 to any port 417
+sudo ufw allow from 10.132.200.80 to any port 417
+sudo ufw allow from 104.131.90.133 to any port 417
+sudo ufw allow from 192.168.1.11 to any port 417
+sudo ufw allow from 10.132.200.81 to any port 417
+sudo ufw allow from 172.27.224.1 to any port 3306
+sudo ufw allow from 172.27.232.1 to any port 3306
+sudo ufw allow from 104.131.29.202 to any port 3306
+sudo ufw allow from 192.168.1.10 to any port 3306
+sudo ufw allow from 10.132.200.80 to any port 3306
+sudo ufw allow from 104.131.90.133 to any port 3306
+sudo ufw allow from 192.168.1.11 to any port 3306
+sudo ufw allow from 10.132.200.81 to any port 3306
+
+
+
+
+
+
+
+
 
 
 sudo ufw allow 417/tcp
