Added mandatory throttling

--- a/mtsender.properties
+++ b/mtsender.properties
@@ -68,3 +68,9 @@ max_throttle_billing=60000
 #Minimum time in milliseconds to wait before sending another request
 # to the billing server
 min_throttle_billing=600
+
+#since Airtel have decided to 
+#throttle us when we try to renew subscriptions
+#, we wait a long time before we try to process
+# a subscription renewal.
+mandatory_throttle=120000
