--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,15 @@
 	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>CMP_HOME</display-name>
+	<listener>
+    	<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+	</listener>
+	
+	<filter>
+   	 	<filter-name>ShiroFilter</filter-name>
+    	<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+	</filter>
+	
 	
 	<filter>
     <filter-name>Resteasy</filter-name>
@@ -56,20 +65,20 @@
          <param-name>UnauthorizedResolutionURL</param-name>
          <param-value>/unauthorized.jsp</param-value>
      </init-param>
-    <init-param>
+    <!--init-param>
         <param-name>SecurityManager.Class</param-name>
         <param-value>com.pixelandtag.cmp.security.CMPSecurityManager</param-value>
-    </init-param>
+    </init-param-->
     
     <init-param>
    	 	<param-name>ExceptionHandler.Class</param-name>
     	<param-value>com.pixelandtag.cmp.handlers.CMPExceptionHandler</param-value>
 	</init-param>
 	
-    <init-param> 
+    <!--init-param> 
  		 <param-name>Interceptor.Classes</param-name> 
   			<param-value> org.stripesstuff.plugin.security.SecurityInterceptor</param-value> 
-		</init-param> 
+		</init-param--> 
 	</filter>
 
 
@@ -92,6 +101,15 @@
      <url-pattern>*.jsp</url-pattern>
      <dispatcher>REQUEST</dispatcher>
  </filter-mapping>
+ 
+ <filter-mapping>
+    <filter-name>ShiroFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+    <dispatcher>ERROR</dispatcher>
+</filter-mapping>
 
 <servlet-mapping>
 	<servlet-name>DispatcherServlet</servlet-name>
