Saved a few things

--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -1,14 +1,28 @@
-# Let's use some in-memory caching to reduce the number of runtime lookups against Stormpath.
-# A real application might want to use a more robust caching solution (e.g. ehcache or a
-# distributed cache).  When using such caches, be aware of your cache TTL settings: too high
-# a TTL and the cache won't reflect any potential changes in Stormpath fast enough.  Too low
-# and the cache could evict too often, reducing performance.
-cacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
-securityManager.cacheManager = $cacheManager
-shiro.loginUrl = LoginPage.action
-#Sha256 şifrelemesi
-sha256Matcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+[main]
+sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
+# configure properties (like session timeout) here if desired
+sessionManager.sessionIdCookieEnabled = true
+
+builtInCacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
+securityManager.cacheManager = $builtInCacheManager
+
+
+# Use the configured native session manager:
+securityManager.sessionManager = $sessionManager
+securityManager.sessionManager.globalSessionTimeout = 3600000
+
+#myfilter = com.pixelandtag.cmp.security.CMPFilter
+
+jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
+jdbcRealm.authenticationQuery = select password from user where username = ?
+jdbcRealm.userRolesQuery = select rl.name from user_role r left join user u on u.id = r.user_id left join role rl on rl.id=r.roles_id where u.username = ?
+
+ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+ds.serverName = db
+ds.user = root
+ds.databaseName = pixeland_content360
+jdbcRealm.dataSource = $ds
+
 
 [urls]
-/login.jsp = authc
-/logout = logout
+/Desktop.action = authc
