--- a/ufw rules.config
+++ b/ufw rules.config
@@ -6,6 +6,7 @@ sudo ufw default allow outgoing
 sudo ufw allow ssh
 sudo ufw allow 417/tcp
 sudo ufw allow 8880/tcp
+sudo ufw allow 7171/tcp
 sudo ufw allow from 10.132.200.81
 sudo ufw allow from 104.131.90.133
 sudo ufw allow from 192.168.1.11
@@ -28,6 +29,7 @@ sudo ufw allow from 10.132.28.144 to any port 417
 sudo ufw allow from 10.132.28.144 to any port 8880
 sudo ufw allow from 41.223.58.157 to any port 8880
 sudo ufw allow from 105.166.211.204 to any port 8880
+sudo ufw allow from 10.132.200.81 to any port 7171
 
 
 c0nT3nT360!!
