--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.14</version>
-			<scope>provided</scope>
+			<!-- scope>provided</scope -->
 		</dependency>
 
 		<dependency>
@@ -591,7 +591,7 @@
 						<resource>
 							<directory>${basedir}/src/main/webapp</directory>
 							<includes>
-								<include>WEB-INF/lib/celcom.jar</include>
+								<include>WEB-INF/lib/celcom.jar,WEB-INF/lib/stripersist-1.0.jar</include>
 							</includes>
 							<excludes>
 								<exclude>CVS/**</exclude>
