--- a/ufw rules.config
+++ b/ufw rules.config
@@ -30,6 +30,7 @@ sudo ufw allow from 10.132.28.144 to any port 8880
 sudo ufw allow from 41.223.58.157 to any port 8880
 sudo ufw allow from 105.166.211.204 to any port 8880
 sudo ufw allow from 10.132.200.81 to any port 7171
+sudo ufw allow from 10.132.200.81 to any port 9292
 
 
 c0nT3nT360!!
