--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+
 		<!-- Shiro web -->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
