--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,14 @@
 			<version>1.9.2</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk16</artifactId>
+			<version>1.46</version>
+		</dependency>
+
+
 		<!-- Shiro web -->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
