Receive works, reaches MO to logs

--- a/.gitignore
+++ b/.gitignore
@@ -938,3 +938,16 @@ log/*
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
