In and out working... sort of

--- a/.gitignore
+++ b/.gitignore
@@ -951,3 +951,19 @@ log/*
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
