Attempt on Demarcation of operators

--- a/.gitignore
+++ b/.gitignore
@@ -967,3 +967,14 @@ log/*
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
