--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
 
 	<dependencies>
 
+
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
