--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -14,8 +14,8 @@ securityManager.sessionManager.globalSessionTimeout = 3600000
 #myfilter = com.pixelandtag.cmp.security.CMPFilter
 
 jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
-jdbcRealm.authenticationQuery = select password from user where username = ?
-jdbcRealm.userRolesQuery = select rl.name from user_role r left join user u on u.id = r.user_id left join role rl on rl.id=r.roles_id where u.username = ?
+jdbcRealm.authenticationQuery = select u_pwd from user where u_name = ?
+jdbcRealm.userRolesQuery = select rl.name from user_role r left join user u on u.id = r.user_id left join role rl on rl.id=r.roles_id where u.u_name = ?
 
 ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 ds.serverName = db
