--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
 		<!--dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> 
 			<version>3.3.2.GA</version> < scope>provided</scope </dependency -->
 
