--- a/ufw rules.config
+++ b/ufw rules.config
@@ -32,6 +32,15 @@ sudo ufw allow from 105.166.211.204 to any port 8880
 sudo ufw allow from 10.132.200.81 to any port 7171
 sudo ufw allow from 10.132.200.81 to any port 9292
 
+sudo ufw allow from 172.27.224.1 to any port 3002
+sudo ufw allow from 172.27.232.1 to any port 3002
+sudo ufw allow from 104.131.29.202 to any port 3002
+sudo ufw allow from 192.168.1.10 to any port 3002
+sudo ufw allow from 10.132.200.80 to any port 3002
+sudo ufw allow from 104.131.90.133 to any port 3002
+sudo ufw allow from 192.168.1.11 to any port 3002
+sudo ufw allow from 10.132.200.81 to any port 3002
+
 
 c0nT3nT360!!
 /*Below are currently active on .db*/
