--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 **/*.settings/org.eclipse.jdt.core.prefs
 **/*.settings/org.eclipse.wst.common.component
 **/*.settings/*
+.settings/
 settings/
 log/*
 /target/
@@ -999,3 +1000,11 @@ log/*
 /target/
 /target/
 .settings/*
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
