--- a/pom.xml
+++ b/pom.xml
@@ -549,6 +549,13 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.opensmpp</groupId>
+			<artifactId>opensmpp-core</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		
 
 
 	</dependencies>
