--- a/ufw rules.config
+++ b/ufw rules.config
@@ -82,6 +82,16 @@ sudo ufw allow from 192.168.1.11 to any port 8880
 sudo ufw allow from 10.132.200.81 to any port 8880
 
 
+sudo ufw allow from 172.27.224.1 to any port 9990
+sudo ufw allow from 172.27.232.1 to any port 9990
+sudo ufw allow from 104.131.29.202 to any port 9990
+sudo ufw allow from 192.168.1.10 to any port 9990
+sudo ufw allow from 10.132.200.80 to any port 9990
+sudo ufw allow from 104.131.90.133 to any port 9990
+sudo ufw allow from 192.168.1.11 to any port 9990
+sudo ufw allow from 10.132.200.81 to any port 9990
+
+
 
 sudo ufw allow from 172.27.224.1 to any port 4447
 sudo ufw allow from 172.27.232.1 to any port 4447
