Parlay x support version 2

--- a/mtsender.properties
+++ b/mtsender.properties
@@ -1,3 +1,7 @@
+ejbhost=localhost
+ejbhostport=4447
+SECURITY_PRINCIPAL=testuser
+SECURITY_CREDENTIALS=testpassword123!
 mturl=http://41.223.58.157:56000/Bharti
 login=content36
 pass=content36
